# jtesseract

./: .gitignore  CMakeLists.txt  README.md  jni.sh  pom.xml
src/: jni.sh
src/main/java/jtesseract/: Box.java  JTessBaseAPI.java  JTessBoolean.java  JTessDouble.java  JTessInt.java  JTesseract.java
src/main/native/: JTessBaseAPI.cpp  JTesseract.cpp  jtesseract_JTessBaseAPI.h  jtesseract_JTesseract.h
src/test/java/jtesseract/: JTesseractTest.java
src/test/java/jtesseract/tests/: JTessBaseAPITest.java
